[package]
name = "Queue-task"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "customer"
path = "src/customer.rs"

[[bin]]
name = "kitchen"
path = "src/kitchen.rs"

[[bin]]
name = "attendant"
path = "src/attendant.rs"

[dependencies]
futures-util = "0.3.31"
lapin = "2.0"
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
